--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
 <!-- CSS -->
 <!-- high priority css files -->
 	<!-- fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="preload" as="style"
-	    onload="this.rel = 'stylesheet'">
-	<link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="preload" as="style"
-		onload="this.rel = 'stylesheet'">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="preload" as="style"
+	    onload="this.rel = 'stylesheet'"> -->
+	<!-- <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="preload" as="style"
+		onload="this.rel = 'stylesheet'"> -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap"
 	rel="preload" as="style" onload="this.rel = 'stylesheet'">
 	<!-- fontawesome icons -->
 	<link href="/assets/font-awesome/css/font-awesome.min.css" rel="preload" as="style"
 		onload="this.rel = 'stylesheet'">
 	<!-- prism -->
-	<link href="/assets/prism/prism.css" rel="preload" as="style"
-	    onload="this.rel = 'stylesheet'">	
+	<!-- <link href="/assets/prism/prism.css" rel="preload" as="style"
+		onload="this.rel = 'stylesheet'">	 -->
+		<link href="/assets/prism/prism.css" rel="stylesheet" media="print" onload="this.media='all'">
 	<!-- application css	 -->
 	<link href="app/style.css" rel="preload" as="style" onload="this.rel = 'stylesheet'">
 	<link href="app/input_SearchTable.css" rel="preload" as="style" onload="this.rel = 'stylesheet'">
@@ -32,10 +33,10 @@
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet" media="print"
 		onload="this.media='all'">
-	<link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet" media="print"
-		onload="this.media='all'">
-	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bowlby+One+SC|Lilita+One&display=swap"
-		rel="stylesheet" media="print" onload="this.media='all'">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet" media="print"
+		onload="this.media='all'"> -->
+	<!-- <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bowlby+One+SC|Lilita+One&display=swap"
+		rel="stylesheet" media="print" onload="this.media='all'"> -->
 	<!-- leaflet map  -->
 	<link href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" rel="stylesheet" media="print"
 		onload="this.media='all'"
@@ -74,6 +75,7 @@
 					<a href="#get_overview">Overview</a>
 					<a href="#get_userInterface">Table User Interface</a>
 					<a href="#get_docUserInterface">Doc User Interface</a>
+					<a href="#get_fonts">Fonts</a>
 
 					<div class="dropdown-bt">Table Issues and Code
 						<i class="fa fa-caret-down"></i>
