Restore font LilitaOne

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 		onload="this.media='all'">
 	<!-- <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet" media="print"
 		onload="this.media='all'"> -->
-	<!-- <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bowlby+One+SC|Lilita+One&display=swap"
-		rel="stylesheet" media="print" onload="this.media='all'"> -->
+	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bowlby+One+SC|Lilita+One&display=swap"
+		rel="stylesheet" media="print" onload="this.media='all'">
 	<!-- leaflet map  -->
 	<link href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" rel="stylesheet" media="print"
 		onload="this.media='all'"
