--- a/index.html
+++ b/index.html
@@ -7,18 +7,14 @@
 <!-- CSS -->
 <!-- high priority css files -->
 	<!-- fonts -->
-	<!-- <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="preload" as="style"
-	    onload="this.rel = 'stylesheet'"> -->
-	<!-- <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="preload" as="style"
-		onload="this.rel = 'stylesheet'"> -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap"
+	rel="preload" as="style" onload="this.rel = 'stylesheet'">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;400;600;700&display=swap"
 	rel="preload" as="style" onload="this.rel = 'stylesheet'">
 	<!-- fontawesome icons -->
 	<link href="/assets/font-awesome/css/font-awesome.min.css" rel="preload" as="style"
 		onload="this.rel = 'stylesheet'">
 	<!-- prism -->
-	<!-- <link href="/assets/prism/prism.css" rel="preload" as="style"
-		onload="this.rel = 'stylesheet'">	 -->
 		<link href="/assets/prism/prism.css" rel="stylesheet" media="print" onload="this.media='all'">
 	<!-- application css	 -->
 	<link href="app/style.css" rel="preload" as="style" onload="this.rel = 'stylesheet'">
@@ -33,8 +29,6 @@
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet" media="print"
 		onload="this.media='all'">
-	<!-- <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet" media="print"
-		onload="this.media='all'"> -->
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Bowlby+One+SC|Lilita+One&display=swap"
 		rel="stylesheet" media="print" onload="this.media='all'">
 	<!-- leaflet map  -->
@@ -65,7 +59,8 @@
 			<div id="bookletSpiralBinding" class="spiral-binding"></div>
 			<div id="frontPage" class="front-page booklet-closed">
 				<div class="front-page-header">
-					<div class="front-page-header-text">Documentation</div>					
+					<!-- <div class="front-page-header-text">Documentation</div>		 -->
+					<div class="front-page-header-text"> </div>					
 					<span class="close-button close-booklet">
 						<div>&times;</div>
 					</span>
