--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
       align-items: center;
       text-align: center;
 	  min-height: 100vh;
-	  color: #3498db;
+	  /* color: #3498db; */
+	  color: teal;
+	  font-family: Arial, Helvetica, sans-serif;
 	}
 	.loader {
 	  border: 8px solid #f3f3f3;
 	  border-radius: 50%;
-	  border-top: 8px solid #3498db;	  
+	  /* border-top: 8px solid #3498db;	  */
+	  border-top: 8px solid teal;	 
 	  width: 60px;
 	  height: 60px;
 	  -webkit-animation: spin 2s linear infinite; /* Safari */
 	  animation: spin 2s linear infinite;
-	  margin: 0 auto; 
-	  
+	  margin: 0 auto;
 	}	
 	/* Safari */
 	@-webkit-keyframes spin {
