Fix id, fix preload text color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 	  min-height: 100vh;
 	  /* color: #3498db; */
 	  color: teal;
+	  background-color: #eee;
 	  font-family: Arial, Helvetica, sans-serif;
+	}
+	.loader-container h4,
+	.loader-container h4,
+	.loader-container h5 {
+		color: teal;
 	}
 	.loader {
 	  border: 8px solid #f3f3f3;
