Add meta description

--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" class="html-hide-scrollbar">
-<style>
-	.loader-container {
-	  display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-	  min-height: 100vh;	  
-	  color: teal;
-	  background-color: #eee;
-	  font-family: Arial, Helvetica, sans-serif;
-	}
-	.loader {
-	  border: 8px solid #fdfdfd;	  
-	  border-radius: 50%;	 
-	  border-top: 8px solid teal; 	  
-	  width: 60px;
-	  height: 60px;
-	  -webkit-animation: spin 2s linear infinite; /* Safari */
-	  animation: spin 2s linear infinite;	  
-	}	
-	/* Safari */
-	@-webkit-keyframes spin {
-	  0% { -webkit-transform: rotate(0deg); }
-	  100% { -webkit-transform: rotate(360deg); }
-	}	
-	@keyframes spin {
-	  0% { transform: rotate(0deg); }
-	  100% { transform: rotate(360deg); }
-	}
-</style>
 <head>
 	<title>Address book</title>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="OhMy Contacts Tabelo - Free Address book table for desktop with programming code and documentation">
+    <meta name="keywords" content="HTML, CSS, JavaScript, address book, contacts, table">
+	<meta name="author" content="Voldo"> 
+	<style>
+		.loader-container {
+		  display: flex;
+		  flex-direction: column;
+		  justify-content: center;
+		  align-items: center;
+		  text-align: center;
+		  min-height: 100vh;	  
+		  color: teal;
+		  background-color: #eee;
+		  font-family: Arial, Helvetica, sans-serif;
+		}
+		.loader {
+		  border: 8px solid #fdfdfd;	  
+		  border-radius: 50%;	 
+		  border-top: 8px solid teal; 	  
+		  width: 60px;
+		  height: 60px;
+		  -webkit-animation: spin 2s linear infinite; /* Safari */
+		  animation: spin 2s linear infinite;	  
+		}	
+		/* Safari */
+		@-webkit-keyframes spin {
+		  0% { -webkit-transform: rotate(0deg); }
+		  100% { -webkit-transform: rotate(360deg); }
+		}	
+		@keyframes spin {
+		  0% { transform: rotate(0deg); }
+		  100% { transform: rotate(360deg); }
+		}
+	</style>   
 <!-- CSS -->
 <!-- high priority css files -->
 	<!-- fonts -->
