--- a/index.html
+++ b/index.html
@@ -110,9 +110,13 @@
 					<a href="#get_overview">Overview</a>
 					<a href="#get_userInterface">Table User Interface</a>
 					<a href="#get_docUserInterface">Doc User Interface</a>
-					<a href="#get_fonts">Fonts</a>
-					<a href="#get_colors">Colors</a>
-
+					<div class="dropdown-bt">Ceneral Issues
+						<i class="fa fa-caret-down"></i>
+					</div>
+					<div class="dropdown-container">
+						<a href="#get_fonts">Fonts</a>
+					    <a href="#get_colors">Colors</a>
+					</div>
 					<div class="dropdown-bt">Table Issues and Code
 						<i class="fa fa-caret-down"></i>
 					</div>
@@ -199,8 +203,12 @@
 					<div class="dropdown-container">
 						<a href="#get_caption">caption</a> 
 						<a href="#get_dataAttribute">data attribute</a>
-						<a href="#get_innerHTML">innerHTML</a>
+						<a href="#get_innerHTML">innerHTML</a> 
+						
 					</div>
+					<a href="#get_audit">Audit</a>
+					<a href="#get_timeTracking">Time Tracking</a>
+					<a href="#get_about">About</a>
 				</div>
 				<div class="front-page-footer"></div>
 			</div>			
