--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 						<i class="fa fa-caret-down"></i>
 					</div>
 					<div class="dropdown-container">
-						<a href="#get_fonts">Fonts</a>
+						<a href="#get_projectDirectory">Project Directory</a>
+						<a href="#get_fonts">Fonts</a>						
 					    <a href="#get_colors">Colors</a>
 					</div>
 					<div class="dropdown-bt">Table Issues and Code
