--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 		  0% { transform: rotate(0deg); }
 		  100% { transform: rotate(360deg); }
 		}
-	</style>   
+	</style>  
+	<link rel="icon" href="/assets/photos/favicon.png" type="image/png"> 
 <!-- CSS -->
 <!-- high priority css files -->
 	<!-- fonts -->
